--- a/yamls/nginx.yaml
+++ b/yamls/nginx.yaml
@@ -16,5 +16,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx
+        image: nginx:stable-alpine
         resources:
+        ports:
+        - containerPort: 80
